# matchcore

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  README.tpl
.github/workflows/: ci.yml  pr-checks.yml  release.yml  rust-ci.yml
benches/: amend.rs  cancel.rs  matching.rs  mixed.rs  mod.rs  submit.rs
docs/: benchmarks.md
examples/: analytics.rs  helpers.rs  iceberg_orders.rs  market_data.rs  market_orders.rs  pegged_orders.rs  price_conditional_orders.rs  standard_orders.rs
src/: book.rs  command.rs  commands.rs  execution.rs  lib.rs  orderbook.rs  orders.rs  outcome.rs  report.rs  types.rs  utils.rs
src/book/: amend.rs  cancel.rs  execution.rs  matching.rs  mod.rs  order_book.rs  peg_level.rs  price_level.rs  submit.rs
src/command/: amend.rs  cancel.rs  error.rs  submit.rs  validation.rs
src/commands/: amend.rs  cancel.rs  command.rs  submit.rs
src/execution/: cancel_reason.rs  command.rs  execution_report.rs  match_result.rs  mod.rs  order_processing_result.rs  report.rs  trade.rs
src/order/: limit.rs  limit_order.rs  mod.rs  order_core.rs  order_type.rs  peg.rs  pegged_order.rs  qty.rs  quantity_policy.rs  side.rs  time.rs  time_in_force.rs
src/orderbook/: amend.rs  analytics.rs  book.rs  cancel.rs  error.rs  execution.rs  level.rs  limit.rs  logic.rs  market_data.rs  matching.rs  operations.rs  peg_level.rs  pegged.rs  price_level.rs  query.rs  submit.rs  trigger.rs
src/orders/: core.rs  flags.rs  id.rs  kind.rs  limit.rs  limit_order.rs  market.rs  market_order.rs  mod.rs  peg.rs  pegged.rs  pegged_order.rs  price_conditional_order.rs  qty.rs
src/outcome/: cancel_reason.rs  command_effects.rs  command_failure.rs  command_report.rs  match_result.rs  order_outcome.rs  trade.rs
src/report/: amend.rs  cancel_reason.rs  (+9 more)
xtask/: Cargo.toml
(+61 files in other folders)
