[package]
name = "matchcore"
version = "0.1.3"
edition = "2024"

authors = ["Minhyuk Kim <kmin1318.dev@gmail.com>"]
description = "A high-performance order book and price-time matching engine implemented as a single-threaded, deterministic, in-memory state machine"

license = "MIT OR Apache-2.0"
readme = "README.md"

repository = "https://github.com/minyukim/matchcore"
homepage = "https://github.com/minyukim/matchcore"
documentation = "https://docs.rs/matchcore"

keywords = ["orderbook", "matching-engine", "trading", "exchange", "finance"]
categories = ["finance", "data-structures"]

[features]
default = []
serde = ["dep:serde"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
serde_json = "1.0"
criterion = "0.8"

[[bench]]
name = "benches"
path = "benches/mod.rs"
harness = false
